--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div id="about-wrapper" class="container-fluid">
 
                 <div id="about-header-img" class="col-md-12 hidden-sm hidden-xs">
-                    <img class="lazy img-responsive" src="http://dummyimage.com/1280x400/ccaacc/0a1163&text=test-head-image" alt="@todo">
+                    <img class="lazy img-responsive" src="assets/images/intro-bg.jpg" alt="@todo">
                     <div id="about-img-overlay">
                         <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
@@ -100,15 +100,15 @@
                         <div id="carousel-example-generic-1" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/824482/161e8a&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="assets/images/about-right-image.jpg" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="assets/images/about-right-image.jpg" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="assets/images/about-right-image.jpg" alt="@todo">
                                 </div>
                             </div>
                             <div id="nav-control" class="col-xs-6 col-xs-offset-3 col-md-3">
@@ -124,15 +124,15 @@
                         <div id="carousel-example-generic-2" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/824482/161e8a&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="assets/images/about-left-image.jpg" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="assets/images/about-left-image.jpg" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="assets/images/about-left-image.jpg" alt="@todo">
                                 </div>
                             </div>
                             <div id="nav-control" class="col-xs-6 col-xs-offset-3 col-md-3">
@@ -158,7 +158,7 @@
             <div id="rooms-wrapper" class="container-fluid">
                 <div id="room-image" class="col-xs-12 hidden-md hidden-lg">
                     <div class="col-xs-12">
-                        <img class="lazy img-responsive" src="http://dummyimage.com/360x180/000/fff&text=dummy-image" alt="@todo">
+                        <img class="lazy img-responsive" src="assets/images/intro-bg.jpg" alt="@todo">
                     </div>
                     <div id="room-image-text" class="col-xs-10 col-xs-offset-1">
                         <p>
@@ -180,7 +180,7 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="col-xs-6 col-md-8">
-                                <img class="lazy img-responsive" src="http://dummyimage.com/180x180/824482/161e8a&text=dummy-image" alt="@todo">
+                                <img class="lazy img-responsive" src="assets/images/3-bedroom-image.jpg" alt="@todo">
                                 <div class="overlay">
                                     <div class="overlay-content">
                                         <h4>3 Bedroom</h4>
@@ -191,21 +191,21 @@
                                         </div>
                                         <div class="col-xs-12 bottom">
                                             <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
-                                            <p>Bakery</p>
+                                            <p>Balcony</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xs-6 col-md-4">
-                                <img class="lazy img-responsive" src="http://dummyimage.com/180x180/3995bf/161e8a&text=dummy-image" alt="@todo">
+                                <img class="lazy img-responsive" src="assets/images/rooms-1.jpg" height="325pxv" alt="@todo">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-6">
-                                <img class="lazy img-responsive" src="http://dummyimage.com/180x180/30cc00/161e8a&text=dummy-image" alt="@todo">
+                                <img class="lazy img-responsive" src="assets/images/rooms-2.jpg" alt="@todo">
                             </div>
                             <div class="col-xs-6">
-                                <img class="lazy img-responsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                                <img class="lazy img-responsive" src="assets/images/2-bedroom-image.jpg" alt="@todo">
                                 <div class="overlay">
                                     <div class="overlay-content right-overlay-md">
                                         <h4>3 Bedroom</h4>
@@ -216,7 +216,7 @@
                                         </div>
                                         <div class="col-xs-12 bottom">
                                             <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
-                                            <p>Bakery</p>
+                                            <p>Balcony</p>
                                         </div>
                                     </div>
                                 </div>
@@ -660,7 +660,7 @@
 
                     <div id="location-map" class="col-xs-12">
                         <img class="lazy img-responsive"
-                             src="http://dummyimage.com/340x140/000/fff&text=dummy-map"
+                             src="assets/images/map.jpg"
                              alt="@todo">
                     </div>
 
