fix About + Carousel img-responsive tags
By specifying the parent container class in the img
tag, the img spans the width of the parent. Haven't seen this
needed before ... jah bless StackOverflow

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div id="about-wrapper" class="container-fluid">
 
                 <div id="about-header-img" class="col-md-12 hidden-sm hidden-xs">
-                    <img class="lazy img-responsive" src="assets/images/intro-bg.jpg" alt="@todo">
+                    <img class="lazy img-responsive col-md-12" src="assets/images/intro-bg.jpg" alt="@todo">
                     <div id="about-img-overlay">
                         <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
@@ -100,15 +100,15 @@
                         <div id="carousel-example-generic-1" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                    <img class="lazy center-block img-responsive" src="assets/images/about-right-image.jpg" alt="@todo">
+                                    <img class="lazy center-block img-responsive col-xs-12" src="assets/images/about-right-image.jpg" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy center-block img-responsive" src="assets/images/about-right-image.jpg" alt="@todo">
+                                    <img class="lazy center-block img-responsive col-xs-12" src="assets/images/about-right-image.jpg" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy center-block img-responsive" src="assets/images/about-right-image.jpg" alt="@todo">
+                                    <img class="lazy center-block img-responsive col-xs-12" src="assets/images/about-right-image.jpg" alt="@todo">
                                 </div>
                             </div>
                             <div id="nav-control" class="col-xs-6 col-xs-offset-3 col-md-3">
@@ -124,15 +124,15 @@
                         <div id="carousel-example-generic-2" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                    <img class="lazy center-block img-responsive" src="assets/images/about-left-image.jpg" alt="@todo">
+                                    <img class="lazy center-block img-responsive col-xs-12" src="assets/images/about-left-image.jpg" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy center-block img-responsive" src="assets/images/about-left-image.jpg" alt="@todo">
+                                    <img class="lazy center-block img-responsive col-xs-12" src="assets/images/about-left-image.jpg" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy center-block img-responsive" src="assets/images/about-left-image.jpg" alt="@todo">
+                                    <img class="lazy center-block img-responsive col-xs-12" src="assets/images/about-left-image.jpg" alt="@todo">
                                 </div>
                             </div>
                             <div id="nav-control" class="col-xs-6 col-xs-offset-3 col-md-3">
