change padding for about text to fit image.
NOTE - This will need to be set manually for the image
       height you use

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div id="rooms-wrapper" class="container-fluid">
                 <div id="room-image" class="col-xs-12 hidden-md hidden-lg">
                     <div class="col-xs-12">
-                        <img class="lazy img-responsive" src="assets/images/intro-bg.jpg" alt="@todo">
+                        <img class="lazy img-responsive col-xs-12" src="assets/images/intro-bg.jpg" alt="@todo">
                     </div>
                     <div id="room-image-text" class="col-xs-10 col-xs-offset-1">
                         <p>
