--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div id="contact">
+<section id="contact">
 	<h1>Contact Us</h1>
 
 <form id="" class="form-horizontal row">
@@ -49,7 +49,7 @@
 
 </form>
 
-</div>
+</section>
 
 </body>
 </html>
